* encoding.c (rb_locale_charmap): When ruby process is run as Windows   Service the console codepage is not set, GetConsoleCP returns 0.   So on such environment, use GetACP().   http://blogs.msdn.com/b/michkap/archive/2005/02/08/369197.aspx   patched by Rafal Bigaj [ruby-core:36832] [Bug #4854]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@31985 b2dd03c8-39d4-4d8f-98ff-823fe69b080e